--- a/flex/04-flex-information/style.css
+++ b/flex/04-flex-information/style.css
@@ -10,7 +10,28 @@ img {
 .title {
   font-size: 36px;
   font-weight: 900;
+  text-align: center;
+  margin-bottom: 32px;
 }
+
+.big_container{
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  gap: 50px;
+
+}
+
+.small_container{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  text-align: center;
+  gap: 20px;
+  width: 200px;
+}
+
+
 
 /* do not edit this footer */
 .footer {
@@ -24,3 +45,4 @@ img {
   justify-content: center;
   background: #eee;
 }
+
